# python-sc2

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Pipfile  README.md  generate_conversion_dicts_bot.py  generate_dicts_from_data_json.py  generate_id_constants_from_stableid.py  generate_protobuffs.py  generate_protobufs.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  setup.py  test_bot.py  watch_replay.py
.doctrees/: environment.pickle
.github/workflows/: ci.yml  codecoverage.yml  docker-ci.yml  pythonactions.yml  pythontest.yml
_sources/ids/: index.rst.txt
bat_files/: analysis_line_profiler.sh  analysis_snakeviz.sh  docker_local_launch.bat  docker_run_autotest_bot.bat  docker_run_damagetest_bot.bat  docker_run_queries_test_bot.bat  docker_run_queries_test_bot.sh  docker_run_upgradestest_bot.bat  run_code_coverage.bat  run_tests.bat  update_ids_and_pickle_files_and_dicts.bat  upload_to_pip.bat
bat_files/docker/: README.md  custom_run_local.py  docker_run_bots.sh
data/: README.md  data.json  readme.md
dockerfiles/: Dockerfile  README.md  test_docker_image.sh  test_new_python_candidate.sh
docs/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: contents.doctree  environment.pickle  index.doctree
docs/_sources/: index.rst.txt
docs/bot_ai/: index.html
docs/client/: index.html
docs/distances/: index.html
docs/example_text/: index.html
docs/game_data/: index.html
docs/game_info/: index.html
docs/game_state/: index.html
docs/ids/: index.html
docs/pixel_map/: index.html
docs/position/: index.html
docs/protocol/: index.html
docs/score/: index.html
docs/text_files/: docker.html  introduction.html
docs/unit/: index.html
docs/unit_command/: index.html
docs/units/: index.html
docs_generate/: conf.py  generate_docs.bat  index.rst
docs_generate/bot_ai/: index.rst
docs_generate/client/: index.rst
docs_generate/distances/: index.rst
docs_generate/example_text/: index.rst
docs_generate/game_data/: index.rst
docs_generate/game_info/: index.rst
docs_generate/game_state/: index.rst
docs_generate/ids/: index.rst
docs_generate/pixel_map/: index.rst
docs_generate/position/: index.rst
docs_generate/protocol/: index.rst
docs_generate/text_files/: docker.rst  introduction.rst
docs_generate/unit/: index.rst
docs_generate/unit_command/: index.rst
docs_generate/units/: index.rst
examples/: arcade_bot.py  bot_vs_bot.py  distributed_workers.py  external_bot.py  fastreload.py  host_external_norestart.py  observer_easy_vs_easy.py  play_tvz.py  run_external.py  show_debug.py  simulate_fight_scenario.py  too_slow_bot.py  watch_replay.py  worker_rush.py  worker_stack_bot.py
examples/aiarena/: README.md  __init__.py  example_bot.py  ladderbots.json  run.py
examples/competitive/: README.md  __init__.py  bot.py  example_bot.py  ladderbots.json  run.py
examples/protoss/: __init__.py  cannon_rush.py  find_adept_shades.py  single_unit_unload_test.py  threebase_voidray.py  warpgate_push.py
examples/terran/: cyclone_push.py  marine_helper_funcs.py  marine_match_bot.py  mass_reaper.py  onebase_battlecruiser.py  proxy_rax.py  ramp_wall.py
examples/zerg/: expand_everywhere.py  hydralisk_push.py  onebase_broodlord.py  worker_split.py  zerg_rush.py  zerg_rush_using_dicts.py
game_state/: index.html
position/: index.html
sc2/: __init__.py  action.py  bot_ai.py  bot_ai_internal.py  cache.py  client.py  constants.py  controller.py  data.py  distances.py  expiring_dict.py  file_maps.py  game_data.py  game_info.py  game_state.py  generate_ids.py  main.py  maps.py  observer_ai.py  paths.py  pixel_map.py  player.py  portconfig.py  position.py  power_source.py  protocol.py  proxy.py  renderer.py  sc2process.py  score.py  unit.py  unit_command.py  units.py  versions.py  wsl.py
sc2/dicts/: __init__.py  free_morphs.py  generic_redirect_abilities.py  structure_creation.py  structure_morphs.py  unit_abilities.py  unit_morphs.py  unit_research_abilities.py  unit_tech_alias.py  unit_train.py  unit_train_build_abilities.py  unit_trained_from.py  unit_unit_alias.py  upgrade_research.py  upgrade_researched_from.py  versions.json
sc2/helpers/: __init__.py  control_group.py  devtools.py
sc2/ids/: __init__.py  ability_id.py  buff_id.py  effect_id.py  id_version.py  unit_typeid.py  upgrade_id.py
sc2/s2clientprotocol/: common_pb2.py  data_pb2.py  debug_pb2.py  error_pb2.py  query_pb2.py  raw_pb2.py  sc2api_pb2.py  score_pb2.py  spatial_pb2.py  ui_pb2.py
test/: Dockerfile  Dockerfile_3.7  Dockerfile_3.8  autotest_bot.py  battery_overcharge_bot.py  benchmark_array_creation.py  benchmark_bot_ai_init.py  benchmark_distance_two_points.py  benchmark_distances_cdist.py  benchmark_distances_points_to_point.py  benchmark_distances_units.py  benchmark_prepare_units.py  conftest.py  damagetest_bot.py  generate_pickle_files_bot.py  queries_test_bot.py  real_time_worker_production.py  run_example_bots_for_few_seconds.py  run_example_bots_vs_computer.py  run_example_bots_vs_each_other.py  test_benchmark_array_creation.py  test_benchmark_distance_two_points.py  test_benchmark_distances_cdist.py  test_benchmark_distances_points_to_point.py  test_benchmark_distances_units.py  test_directions.py  test_examples.py  test_expiring_dict.py  test_pickled_data.py  test_pickled_ramp.py  test_replays.py  test_sliding_window.py  travis_test_script.py  upgradestest_bot.py
test/pickle_data/: 16-BitLE.xz  2000AtmospheresAIE.xz  AbiogenesisLE.xz  AbyssalReefLE.xz  AcidPlantLE.xz  AcolyteLE.xz  Acropolis.xz  AcropolisLE.xz  AltitudeAIE.xz  AncientCisternAIE.xz  Artana.xz  AscensiontoAiurLE.xz  AutomatonLE.xz  BabylonAIE.xz  BackwaterLE.xz  Bandwidth.xz  BattleontheBoardwalkLE.xz  BelShirVestigeLE.xz  BerlingradAIE.xz  BlackburnAIE.xz  BlackpinkLE.xz  BloodBoilLE.xz  BlueshiftLE.xz  CactusValleyLE.xz  CatalystLE.xz  CeruleanFallLE.xz  CrystalCavern.xz  CuriousMindsAIE.xz  CyberForestLE.xz  DarknessSanctuaryLE.xz  DeathAura506.xz  DeathAuraLE.xz  DigitalFrontier.xz  (+65 more)
unit/: index.html
(+43 files in other folders)
